# src/modules/user/user.controller.ts
@@ -1,3 +1,4 @@
+// src/users/user.controller.ts
 import {
   Controller,
   Get,
@@ -11,7 +12,6 @@ import {
   Req,
 } from '@nestjs/common';
 import { UserService } from './user.service';
-
 import { AtGuard, RolesGuard } from '../auth/guards';
 import { Roles } from '../auth/decarators';
 import {
@@ -31,26 +31,22 @@ export class UserController {
   @UseGuards(AtGuard, RolesGuard)
   @Roles('admin')
   async create(@Body() createUserDto: CreateUserDto) {
-    // Предположим, у нас в DTO есть поле password и опционально role
     const createdUser = await this.userService.create(createUserDto);
     return createdUser;
   }
 
-  @UseGuards(AtGuard)
   @Get('me')
   async getMe(@Req() req) {
     const userId = req.user.sub;
     return this.userService.findById(userId);
   }
 
-  @UseGuards(AtGuard)
   @Patch('me')
   async updateMe(@Req() req, @Body() updateUserDto: UpdateUserDto) {
     const userId = req.user.sub;
     return this.userService.updateProfile(userId, updateUserDto);
   }
 
-  @UseGuards(AtGuard)
   @Patch('change-password')
   async changePassword(
     @Req() req,
@@ -71,13 +67,11 @@ export class UserController {
   ) {
     page = Number(page) || 1;
     limit = Number(limit) || 10;
-
     const { count, rows } = await this.userService.findAll(
       page,
       limit,
       searchQuery,
     );
-
     return {
       totalUsers: count,
       currentPage: page,
@@ -86,9 +80,9 @@ export class UserController {
     };
   }
 
+  @Patch(':id/role')
   @UseGuards(AtGuard, RolesGuard)
   @Roles('admin')
-  @Patch(':id/role')
   async updateUserRole(
     @Param('id') userId: string,
     @Body() updateUserRoleDto: UpdateUserRoleDto,
@@ -96,18 +90,26 @@ export class UserController {
     return this.userService.updateUserRole(userId, updateUserRoleDto);
   }
 
-  // src/users/users.controller.ts
+  // Новый эндпоинт для блокировки/разблокировки пользователя
+  @Patch(':id/block')
+  @UseGuards(AtGuard, RolesGuard)
+  @Roles('admin')
+  async updateUserStatus(
+    @Param('id') userId: string,
+    @Body('isBlocked') isBlocked: boolean,
+  ) {
+    return this.userService.updateUserStatus(userId, isBlocked);
+  }
 
-  @UseGuards(AtGuard)
   @Patch('set-password')
   async setPassword(@Req() req, @Body() dto: SetPasswordDto) {
     const userId = req.user.sub;
     return this.userService.setPassword(userId, dto);
   }
 
+  @Delete(':id')
   @UseGuards(AtGuard, RolesGuard)
   @Roles('admin')
-  @Delete(':id')
   async removeUser(@Param('id') userId: string): Promise<void> {
     return this.userService.remove(userId);
   }
